--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "bindings": "~1.3.0",
     "nan": "~2.14.0",
-    "@mapbox/node-pre-gyp": "~0.11.0"
+    "@mapbox/node-pre-gyp": "^1.0.4"
   },
   "devDependencies": {
     "nodeunit": "~0.11.2",
